# kredz

./: .gitignore  AGENTS.md  BUILD_CLUB_APPLICATION.md  CATALYST_PROPOSAL.md  DEPLOYMENT_PLAN.md  PROGRESS.md  README.md  ROADMAP.md  SOLANA_INTEGRATION.md  aliit-spotlight-application.md  kredz-pitch-deck.pptx  linkedin-post-kredz.md  prd.md
backend/: .env.example  .gitignore  README.md  openapi.yaml  package.json  tsconfig.json
backend/python/: bridge.py  model.py  requirements.txt
backend/src/: config.ts  index.ts
canton/: .env.example  DEVNET.md  README.md  bootstrap.canton  daml.yaml  deploy-dar.sh  docker-compose.yaml
canton/config/: mediator.conf  participant1.conf  participant2.conf  sequencer.conf
canton/daml/: KredzQuery.daml  KredzScore.daml  KredzSubscription.daml  KredzTests.daml  Main.daml
contracts/: .env.example  .gitignore  foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: KredzAttestationVerifier.sol  KredzScoreBadge.sol  MockReputationRegistry.sol
effectstream/: .env.example  README.md  package.json  tsconfig.json
kredz-frontend/: .env.example  index.html  middleware.ts  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vercel.json  vite.config.ts
kredz-midnight/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
relayer/: .env.example  index.ts  package.json
scripts/: gen_deck.py
solana/: .env.example  .gitignore  Anchor.toml  Cargo.toml  package.json
solana/programs/kredz_score_badge/: Cargo.toml
solana/programs/kredz_score_badge/src/: lib.rs
(+124 files in other folders)
